--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.3",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -23,7 +24,6 @@
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "next-intl": "^2.17.0",
-    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3",
