--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-intl": "^2.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "typescript": "5.1.3",
     "yup": "^1.2.0"
   },
