--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "eslint-config-next": "^13.4.12",
     "formik": "^2.4.2",
-    "next": "13.4.6",
+    "next": "^13.4.12",
     "next-auth": "^4.22.1",
     "next-intl": "^2.17.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "typescript": "5.1.3",
     "yup": "^1.2.0"
