--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.12",
     "formik": "^2.4.2",
+    "moment": "^2.29.4",
     "next": "^13.4.12",
     "next-auth": "^4.22.1",
     "next-intl": "^2.17.0",
